# mark

./: .gitignore  README.md
config/: boot.py  get_ip.py  remote.py
mark_app/: README.md  app.py  common.py  controller.py  local_client.py  pyproject.toml  recorder.py  server.py
mark_app/docs/: app_diagram.drawio
mark_description/: CMakeLists.txt  README.md  package.xml
mark_description/launch/: display.launch
mark_description/meshes/: gripper_arm_a.stl  wheel.dae
mark_description/rviz/: config.rviz
mark_description/urdf/: base.urdf.xacro  camera.urdf.xacro  gripper.urdf.xacro  inertial.urdf.xacro  mark.urdf.xacro  materials.urdf.xacro  ultrasonic.urdf.xacro  wheel.urdf.xacro
mark_docker/: Dockerfile  README.md
mark_docker/scripts/: compile-urdf.sh  setup-workspace.sh
mark_unity/: Mark.unitypackage  README.md
mark_unity/Assets/Materials/: Ground.mat
mark_unity/Assets/Prefabs/: mark.prefab
mark_unity/Assets/Scenes/: BasicScene.unity
mark_unity/Assets/Scripts/: CameraManager.cs  MarkController.cs  TopDownCameraFollow.cs
mark_unity/Assets/URDF/: mark.urdf
mark_unity/Assets/URDF/Materials/: grey.mat
mark_unity/Assets/URDF/mark_description/meshes/: gripper_arm_a.dae  gripper_arm_b.dae  gripper_arm_b.stl  gripper_base.dae  gripper_base.stl
mark_unity/ProjectSettings/: ProjectSettings.asset
ros_docker/: Dockerfile  README.md  set-up-workspace
